starting character listing

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,1 +1,3 @@
 $rootRemBase: 16px;
+$font-primary: "Lato", Calibri, Arial, sans-serif;
+$font-secondary: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
