--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -13,7 +13,7 @@ html {
 
 body {
   position: relative;
-  font-family: "Arial", sans-serif;
+  font-family: "Lato", Calibri, Arial, sans-serif;
   font-size: 16px;
 }
 
