Add more components of layout

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -17,6 +17,12 @@ body {
   font-size: 16px;
 }
 
+:global {
+  .modalVisible {
+    overflow: hidden !important;
+  }
+}
+
 img {
   display: block;
   height: auto;
